Fix marketplace page cdp list background color overflow.

--- a/client/src/components/MarketplacePage/MarketplacePage.scss
+++ b/client/src/components/MarketplacePage/MarketplacePage.scss
@@ -4,12 +4,15 @@
 .marketplace-page-wrapper {
 
   .content-wrapper {
-    display: flex;
+    background: $gray-6;
+    flex-direction: column;
   }
 
   .filters-wrapper {
+    width: 100%;
     height: 44px;
-    margin: 20px 0;
+    max-width: 1100px;
+    margin: 20px auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -95,6 +98,7 @@
     }
 
     .button {
+      margin-right: 10px;
       width: 124px;
 
       span {
@@ -105,10 +109,15 @@
   }
 
   .cdp-list-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     background: $gray-6;
     flex-shrink: 0;
+
+    .cdp-list {
+      max-width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
 }
